tests/baselines/reference/optionalBindingParameters1.errors.txt
tests/cases/conformance/es6/destructuring/optionalBindingParameters1.ts(8,5): error TS2345: Argument of type '[boolean, number, string]' is not assignable to parameter of type '[string, number, boolean]'.


==== tests/cases/conformance/es6/destructuring/optionalBindingParameters1.ts (1 errors) ====
    
    function foo([x,y,z]?: [string, number, boolean]) {
    
    }
    
    foo(["", 0, false]);
    
    foo([false, 0, ""]);
        ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[boolean, number, string]' is not assignable to parameter of type '[string, number, boolean]'.